[package]
name = "ascii_assets"
version = "0.1.9"
edition = "2024"
description = "a small library for handling a custom filetype used to store and load Sprite Assets"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simoncreates/ascii-assets.git"

[dependencies]
byteorder = "1.5" 
rand = "0.9.2"

[lib]
path = "src/lib.rs"

